...
					v-if="user?.id === currentUser?.id"
					slot="end"
					class="mr-2 gap-2"
				>
					<IonButton
						id="notifications"
						aria-label="Notifications"
						color="medium"
						router-link="/tabs/profile/notifications"
						class="size-8 flex items-center"
					>
						<UChip
							v-if="unreadCount > 0"
...
