...
						<IonButton
							fill="clear"
							size="small"
							color="medium"
							class="-mr-2"
							@click="close({ completed: false })"
							aria-label="Close tour"
						>
							<UIcon
								name="i-heroicons-x-mark"
								class="size-4"
							/>
						</IonButton>
...
