...

		<div class="flex flex-col items-center w-full px-3">
			<h2
				id="name"
				class="text-lg! mb-2 text-center font-semibold!"
			>
				Profile
			</h2>
			<IonList class="w-full max-w-md p-2! rounded-xl border-2 border-default">
				<IonItem id="visibility">
					<IonSelect
						label="Visibility"
						label-placement="fixed"
...
			trigger="select-activities-trigger"
			ref="activitiesModal"
		>
			<IonHeader>
				<IonToolbar>
					<IonButtons slot="start">
						<IonButton @click="cancelActivityChanges">Cancel</IonButton>
					</IonButtons>
					<IonTitle class="text-center">Select Activities</IonTitle>
					<IonButtons slot="end">
						<IonButton @click="confirmActivityChanges">Done</IonButton>
					</IonButtons>
				</IonToolbar>
...
